<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InFragment">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="305dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/or_use_one_of_your_social_profiles"
            android:textColor="#676767"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="370dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:text="@string/password"
            android:textColor="#DD2C00"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_In_fragment" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="370dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:text="@string/email"
            android:textColor="#DD2C00"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/sign_up_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.988"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTwitter"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="370dp"
            android:layout_height="54dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="370dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:text="@string/hi_there_nice_to_see_you_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/email_text_In_fragment"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/password_text_In_fragment"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/your_password"
            android:inputType="numberPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_In_fragment" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/buttonTwitter"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:enabled="true"
            android:text="Twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.027"></com.twitter.sdk.android.core.identity.TwitterLoginButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>